--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@
 name = "coatcheck"
 version = "0.0.1"
 authors = ["Steven Allen <steven@stebalien.com>"]
+
+[dependencies.snowflake]
+git = "https://github.com/Stebalien/snowflake.git"
